# winrt-notification

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs
0_1_3/: search-index.js
0_1_3/winrt_notification/: Duration.t.html  enum.Duration.html  enum.IconCrop.html  enum.LoopableSound.html  enum.Sound.html  index.html  sidebar-items.js  struct.Toast.html
0_1_5/: search-index.js
0_1_5/winrt_notification/: LoopableSound.t.html  Sound.t.html  Toast.t.html  enum.Duration.html  enum.Error.html  enum.IconCrop.html  enum.LoopableSound.html  enum.Sound.html  index.html  sidebar-items.js  struct.Toast.html
0_2_0/: search-index.js
0_2_0/winrt_notification/: IconCrop.t.html  enum.Duration.html  enum.Error.html  enum.IconCrop.html  enum.LoopableSound.html  enum.Sound.html  index.html  struct.Toast.html
0_3_0/: search-index.js  settings.html  source-files.js
0_3_0/const_sha1/: all.html  constant.BUFFER_SIZE.html  fn.sha1.html  index.html  sidebar-items.js  struct.ConstBuffer.html  struct.Digest.html
0_3_0/squote/: all.html  enum.Delimiter.html  index.html  macro.format_ident.html  macro.quote.html  sidebar-items.js  struct.Ident.html  struct.Literal.html  struct.TokenStream.html  trait.ToTokens.html
0_3_0/strum/: all.html  derive.AsRefStr.html  derive.AsStaticStr.html  derive.Display.html  derive.EnumCount.html  derive.EnumDiscriminants.html  derive.EnumIter.html  derive.EnumMessage.html  derive.EnumProperty.html  derive.EnumString.html  derive.EnumVariantNames.html  derive.IntoStaticStr.html  derive.ToString.html  enum.ParseError.html  index.html  trait.AsStaticRef.html  trait.EnumCount.html  trait.EnumMessage.html  trait.EnumProperty.html  trait.IntoEnumIterator.html  trait.VariantNames.html
0_3_0/strum_macros/: all.html  derive.AsRefStr.html  derive.AsStaticStr.html  derive.Display.html  derive.EnumCount.html  derive.EnumDiscriminants.html  derive.EnumIter.html  derive.EnumMessage.html  derive.EnumProperty.html  derive.EnumString.html  derive.EnumVariantNames.html  derive.IntoStaticStr.html  derive.ToString.html  index.html
0_3_0/syn/: struct.Ident.html
0_3_0/windows/: all.html  attr.implement.html  constant.TRUE.html  (+30 more)
0_5_0/: crates.js  search-index.js  settings.html  source-files.js
examples/: action_simple.rs  actions.rs  handlers.rs  header.rs  image.rs  input.rs  reuse.rs  reuse_arguments.rs  reuse_toast.rs  selections.rs  simple.rs  without_library.rs  without_library_action.rs
src/: bindings.rs  lib.rs  toast_action.rs  toast_input.rs  windows_check.rs
(+539 files in other folders)
