[package]
name = "winrt-notification"
version = "0.3.0"
authors = ["allenbenz"]
keywords = ["notification", "windows", "toast", "notify"]
readme = "README.md"
description = "An incomplete wrapper over the WinRT toast api"
documentation = "https://allenbenz.github.io/winrt-notification/0_1_3/winrt_notification/"
repository = "https://github.com/allenbenz/winrt-notification"
license = "MIT"
exclude = [".vscode/*"]
edition = '2018'

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
xml-rs = "0.8.3"
strum = { version = "0.20", features = ["derive"] }
windows = "0.3.1"

[build-dependencies]
windows = "0.3.1"
