[package]
name = "winrt-notification"
version = "0.2.3"
authors = ["allenbenz"]
keywords = ["notification", "windows", "toast", "notify"]
readme = "README.md"
description = "An incomplete wrapper over the WinRT toast api"
documentation = "https://allenbenz.github.io/winrt-notification/0_1_3/winrt_notification/"
repository = "https://github.com/allenbenz/winrt-notification"
license = "MIT"
exclude = [
    ".vscode/*"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies.winrt]
version = "0.4.0"
features = ["windows-data", "windows-ui"]

[dependencies]
xml-rs = "0.6.1"
winapi = "^0.3.4"
strum = "0.8.0"
strum_macros = "0.8.0"
