[package]
name = "winrt-notification"
version = "0.5.1"
authors = ["allenbenz"]
keywords = ["notification", "windows", "toast", "notify"]
readme = "README.md"
description = "An incomplete wrapper over the WinRT toast api"
documentation = "https://allenbenz.github.io/winrt-notification/0_5_0/winrt_notification/"
repository = "https://github.com/allenbenz/winrt-notification"
license = "MIT"
exclude = [".vscode/*"]
edition = '2018'

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
xml-rs = "0.8.4"
strum = { version = "0.22.0", features = ["derive"] }

[target.'cfg(target_env = "msvc")'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_System_SystemInformation",
    "Data_Xml_Dom",
    "UI_Notifications",
]

[target.'cfg(target_env = "gnu")'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Data_Xml_Dom",
    "UI_Notifications",
]
